--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,17 @@ services:
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
   my-app-backend:
-    image: proj-backend
+    build:
+      context: mybackend
+      dockerfile: ./dockerfile
     depends_on:
       - mongodb
     ports:
      - 4000:4000
   my-app-frontend:
-    image: proj-frontend
+    build:
+      context: myfrontend 
+      dockerfile: ./dockerfile
     depends_on:
       - my-app-backend
     ports:
