--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   mongo-express:
     image: mongo-express
     restart: always
+    restart: always
     depends_on:
       - mongodb
     ports:
